@@ -7,7 +7,7 @@ local turninSteps = {
         { id=1, text="Items in bags", header="Bags", targetMailID=1, targetBankID=1, section=nil, mapID=nil, zone=nil, subZone=nil, reached=true, interactedWithMail=false, interactedWithBank=false },
         { id=2, text="Cenarion Hold", header="Mail", targetMailID=2, targetBankID=nil, section="SilithusHold", mapID=1451, zone="Silithus", subZone="Cenarion Hold", reached=false, interactedWithMail=false, interactedWithBank=false },
         { id=3, text="Gadgetzan", header="Mail & Bank", targetMailID=3, targetBankID=2, section="TanarisTown", mapID=1446, zone="Tanaris", subZone="Gadgetzan", reached=false, interactedWithMail=false, interactedWithBank=false },
-        { id=4, text="Bloodvenom Post", header="Mail", targetMailID=4, targetBankID=nil, section="felwoodTown", mapID=1440, zone="Felwood", subZone="Bloodvenom Post", reached=false, interactedWithMail=false, interactedWithBank=false },
+        { id=4, text="Bloodvenom Post", header="Mail", targetMailID=4, targetBankID=nil, section="felwoodTown", mapID=1448, zone="Felwood", subZone="Bloodvenom Post ", reached=false, interactedWithMail=false, interactedWithBank=false },
         { id=5, text="Orgrimmar 1/2", header="Mail", targetMailID=5, targetBankID=nil, section="OrgrimmarDrag", mapID=1454, zone="Orgrimmar", subZone="The Drag", reached=false, interactedWithMail=false, interactedWithBank=false },
         { id=6, text="Orgrimmar 2/2", header="Bank", targetMailID=nil, targetBankID=3, section="OrgrimmarBank", mapID=1454, zone="Orgrimmar", subZone="Valley of Strength", reached=false, interactedWithMail=false, interactedWithBank=false },
         { id=7, text="Light's Hope Chapel", header="Mail", targetMailID=6, targetBankID=nil, section="EPLTown", mapID=1423, zone="Eastern Plaguelands", subZone="Light's Hope Chapel", shortZoneText="EPL, Light's Hope Chapel", reached=false, interactedWithMail=false, interactedWithBank=false },
@@ -18,7 +18,7 @@ local turninSteps = {
         { id=1, text="Items in bags", header="Bags", targetMailID=1, targetBankID=1, section=nil, mapID=nil, zone=nil, subZone=nil, reached=true, interactedWithMail=false, interactedWithBank=false },
         { id=2, text="Cenarion Hold", header="Mail", targetMailID=2, targetBankID=nil, section="SilithusHold", mapID=1451, zone="Silithus", subZone="Cenarion Hold", reached=false, interactedWithMail=false, interactedWithBank=false },
         { id=3, text="Gadgetzan", header="Mail & Bank", targetMailID=3, targetBankID=2, section="TanarisTown", mapID=1446, zone="Tanaris", subZone="Gadgetzan", reached=false, interactedWithMail=false, interactedWithBank=false },
-        { id=4, text="Bloodvenom Post", header="Mail", targetMailID=4, targetBankID=nil, section="felwoodTown", mapID=1440, zone="Felwood", subZone="Bloodvenom Post", reached=false, interactedWithMail=false, interactedWithBank=false },
+        { id=4, text="Bloodvenom Post", header="Mail", targetMailID=4, targetBankID=nil, section="felwoodTown", mapID=1448, zone="Felwood", subZone="Bloodvenom Post ", reached=false, interactedWithMail=false, interactedWithBank=false },
         { id=5, text="Orgrimmar 1/2", header="Mail", targetMailID=5, targetBankID=nil, section="OrgrimmarDrag", mapID=1454, zone="Orgrimmar", subZone="The Drag", reached=false, interactedWithMail=false, interactedWithBank=false },
         { id=6, text="Orgrimmar 2/2", header="Bank", targetMailID=nil, targetBankID=3, section="OrgrimmarBank", mapID=1454, zone="Orgrimmar", subZone="Valley of Strength", reached=false, interactedWithMail=false, interactedWithBank=false },
         { id=7, text="Light's Hope Chapel", header="Mail", targetMailID=6, targetBankID=nil, section="EPLTown", mapID=1423, zone="Eastern Plaguelands", subZone="Light's Hope Chapel", shortZoneText="EPL, Light's Hope Chapel", reached=false, interactedWithMail=false, interactedWithBank=false },
@@ -29,7 +29,7 @@ local turninSteps = {
         { id=1, text="Items in bags", header="Bags", targetMailID=1, targetBankID=1, section=nil, mapID=nil, zone=nil, subZone=nil, reached=true, interactedWithMail=false, interactedWithBank=false },
         { id=2, text="Cenarion Hold", header="Mail", targetMailID=2, targetBankID=nil, section="SilithusHold", mapID=1451, zone="Silithus", subZone="Cenarion Hold", reached=false, interactedWithMail=false, interactedWithBank=false },
         { id=3, text="Gadgetzan", header="Mail & Bank", targetMailID=3, targetBankID=2, section="TanarisTown", mapID=1446, zone="Tanaris", subZone="Gadgetzan", reached=false, interactedWithMail=false, interactedWithBank=false },
-        { id=4, text="Bloodvenom Post", header="Mail", targetMailID=4, targetBankID=nil, section="felwoodTown", mapID=1440, zone="Felwood", subZone="Bloodvenom Post", reached=false, interactedWithMail=false, interactedWithBank=false },
+        { id=4, text="Bloodvenom Post", header="Mail", targetMailID=4, targetBankID=nil, section="felwoodTown", mapID=1448, zone="Felwood", subZone="Bloodvenom Post ", reached=false, interactedWithMail=false, interactedWithBank=false },
         { id=5, text="Orgrimmar 1/2", header="Mail", targetMailID=5, targetBankID=nil, section="OrgrimmarDrag", mapID=1454, zone="Orgrimmar", subZone="The Drag", reached=false, interactedWithMail=false, interactedWithBank=false },
         { id=6, text="Orgrimmar 2/2", header="Bank", targetMailID=nil, targetBankID=3, section="OrgrimmarBank", mapID=1454, zone="Orgrimmar", subZone="Valley of Strength", reached=false, interactedWithMail=false, interactedWithBank=false },
         { id=7, text="Undercity", header="Mail & Bank", targetMailID=6, targetBankID=4, section="Undercity2", mapID=1458, zone="Undercity", subZone="Trade Quarter", reached=false, interactedWithMail=false, interactedWithBank=false },
